--- a/UserAPIServices/UserAPIServices.csproj
+++ b/UserAPIServices/UserAPIServices.csproj
@@ -4,5 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Context\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 
 </Project>
