--- a/AdminAPIServices/appsettings.json
+++ b/AdminAPIServices/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=DESKTOP-6D1S4CB\\SQLEXPRESS;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=123;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
