--- a/AirlineBooking/appsettings.Development.json
+++ b/AirlineBooking/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
+
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=DESKTOP-6D1S4CB\\SQLEXPRESS;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=123;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
       //"Development"
     }
   }
