--- a/AdminAPIServices/Properties/launchSettings.json
+++ b/AdminAPIServices/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/admin",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "AdminAPIServices": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/admin",
+      "launchUrl": "api/v1.0/flight",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
