--- a/UserAPIServices/appsettings.Development.json
+++ b/UserAPIServices/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=JRDOTNETFSECO-2;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=pass@word1;MultipleActiveResultSets=True;"
+    //"DatabaseConnection": "Server=JRDOTNETFSECO-2;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=pass@word1;MultipleActiveResultSets=True;"
+    "DatabaseConnection": "Server=DESKTOP-6D1S4CB\\SQLEXPRESS;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=123;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
