Commit for search change

--- a/UserAPIServices/appsettings.Development.json
+++ b/UserAPIServices/appsettings.Development.json
@@ -1,7 +1,9 @@
 {
+
   "ConnectionStrings": {
-    //"DatabaseConnection": "Server=JRDOTNETFSECO-2;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=pass@word1;MultipleActiveResultSets=True;"
-    "DatabaseConnection": "Server=DESKTOP-6D1S4CB\\SQLEXPRESS;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=123;MultipleActiveResultSets=True;"
+    "DatabaseConnection": "Server=JRDOTNETFSECO-2;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=pass@word1;MultipleActiveResultSets=True;"
+    //,
+    //"DatabaseConnection": "Server=DESKTOP-6D1S4CB\\SQLEXPRESS;Database=AirlineBooking;Persist Security Info=True;User ID=SA;Password=123;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +11,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
